--- a/new_pages/data_used.qmd
+++ b/new_pages/data_used.qmd
@@ -184,6 +184,10 @@ The [Contact Tracing](contact_tracing.qmd) page demonstrated analysis of contact
 	<span>the contact follow-up data (.rds file)</span>
 </a>
 
+<a href='https://github.com/appliedepi/epiRhandbook_eng/blob/master/data/contact_tracing.rds?raw=true' class='download-button'>
+	Click to download
+	<span>the contact follow-up data (.rds file)</span>
+</a>
 
 
 <span style="color: black;">**_NOTE:_** Structured contact tracing data from other software (e.g. KoBo, DHIS2 Tracker, CommCare) may look different. If you would like to contribute alternative sample data or content for this page, please [contact us](https://epirhandbook.com/#r-for-applied-epidemiology-and-public-health).</span> 
