--- a/new_pages/pivoting.qmd
+++ b/new_pages/pivoting.qmd
@@ -253,10 +253,12 @@ However, there will be many cases when, as a field epidemiologist, you will be w
 
 One particularly common problem you will encounter will be the need to pivot columns that contain different classes of data. This pivot will result in storing these different data types in a single column, which is not a good situation. There are various approaches one can take to separate out the mess this creates, but there is an important step you can take using `pivot_longer()` to avoid creating such a situation yourself.
 
-Take a situation in which there have been a series of observations at different time steps for each of three items A, B and C. Examples of such items could be individuals (e.g. contacts of an Ebola case being traced each day for 21 days) or remote village health posts being monitored once per year to ensure they are still functional. Let's use the contact tracing example. Imagine that the data are stored as follows:
+Take a situation in which there have been a series of observations at different time steps for each of three items A, B and C. Examples of such items could be individuals (e.g. contacts of an Ebola case being traced each day for 21 days) or remote village health posts being monitored once per year to ensure they are still functional. 
+
+Let's use the contact tracing example. You can download the data [here](https://github.com/appliedepi/epiRhandbook_eng/blob/master/data/contact_tracing.rds).
 
 
-```{r, message=FALSE, echo=F}
+```{r, message = FALSE, echo = T}
 
 df <- 
   tibble::tribble(
