--- a/new_pages/time_series.qmd
+++ b/new_pages/time_series.qmd
@@ -1116,7 +1116,8 @@ it is not the final model that you are using for prediction.
 An alternative is to use a method called cross-validation. In this scenario you 
 roll over all of the data available to fit multiple models to predict one year ahead. 
 You use more and more data in each model, as seen in the figure below from the 
-same [*Hyndman et al* text]((https://otexts.com/fpp3/). 
+same [Hyndman et al.,](https://otexts.com/fpp3/).
+
 For example, the first model uses 2002 to predict 2003, the second uses 2002 and 
 2003 to predict 2004, and so on. 
 ![](`r "https://otexts.com/fpp2/fpp_files/figure-html/cv1-1.png"`)
@@ -1310,7 +1311,7 @@ to calculate the "control mean" (~fitted values) - it then uses a computed
 generalized likelihood ratio statistic to assess if there is shift in the mean 
 for each week. Note that the threshold for each week takes in to account previous
 weeks so if there is a sustained shift an alarm will be triggered. 
-(Also note that after each alarm the algorithm is reset)
+(Also note that after each alarm the algorithm is reset).
 
 In order to work with the **surveillance** package, we first need to define a 
 "surveillance time series" object (using the `sts()` function) to fit within the 
@@ -1555,9 +1556,9 @@ observed <- predict(fitted_model, simulate_pi = FALSE)
 ```{r table_regression, eval = FALSE, echo = TRUE}
 
 ## show estimates and percentage change in a table
-fitted_model %>% 
+model %>% 
   ## extract original negative binomial regression
-  get_model() %>% 
+  get_model() %>%
   ## get a tidy dataframe of results
   tidy(exponentiate = TRUE, 
        conf.int = TRUE) %>% 
